# MAgent2

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CMakeLists.txt  CNAME  Justfile  LICENSE  MANIFEST.in  Parallel_Demo.py  README.md  battle_demo.py  battle_video.py  build.sh  index.html  objects.inv  pyproject.toml  requirements.txt  searchindex.js  setup.py
.github/workflows/: build-docs-version.yml  build-publish.yml  build-test-publish.yml  gh-pages.yml  manual-build-docs-version.yml  pre-commit.yml
API/config/: index.html
API/gridworld/: index.html
README/: index.html
content/installation/: index.html
doc/: Tutorial for Many Kinds of Agents.md  get_started.md
docs/: conf.py  index.md  magent.md  magent2.md  requirements.txt
docs/API/: config.md  gridworld.md
docs/environments/: adversarial_pursuit.md  battle.md  battlefield.md  combined_arms.md  environments.md  gather.md  index.md  tiger_deer.md
docs/introduction/: basic_usage.md  key_concepts.md
docs/introduction/API/: config.md
docs/legacy/: Tutorial for Many Kinds of Agents.md  get_started.md
docs/scripts/: gen_mds.py
environments/: index.html
environments/adversarial_pursuit/: index.html
environments/battle/: index.html
environments/battlefield/: index.html
environments/combined_arms/: index.html
environments/gather/: index.html
environments/tiger_deer/: index.html
examples/: api_demo.py  model.py  show_arrange.py  show_battle_game.py  train_against.py  train_arrange.py  train_battle.py  train_battle_game.py  train_gather.py  train_multi.py  train_pursuit.py  train_single.py  train_tiger.py  train_trans.py
examples/models/: buffer.py  common.py
examples/models/mx_model/: __init__.py  a2c.py  base.py  dqn.py
examples/models/rule_model/: __init__.py  random.py  runaway.py  rush.py  rushgather.py
examples/models/tf_model/: __init__.py  a2c.py  base.py  dqn.py  drqn.py
examples/renderer/: __init__.py  pygame_renderer.py  render_fn.py
examples/renderer/server/: __init__.py  arrange_server.py  base_server.py  battle_server.py  random_server.py  sample_server.py
examples/scripts/: plot.py  plot_heat.py  plot_log.py  plot_many.py  rename.py  tournament.py
examples/scripts/test/: search.py  test_1m.py  test_against.py  test_fps.py  test_tiger.py
genindex/: index.html
introduction/API/config/: index.html
introduction/API/gridworld/: index.html
introduction/basic_usage/: index.html
introduction/key_concepts/: index.html
legacy/Tutorial for Many Kinds of Agents/: index.html
legacy/get_started/: index.html
magent/: CMakeLists.txt  __init__.py  build.sh  c_lib.py  gridworld.py  render.py  utility.py
magent/builtin/config/: battle.py  double_attack.py  forest.py  pursuit.py
magent/src/: runtime_api.cc
magent2/: __init__.py  c_lib.py  gridworld.py  index.html  render.py
magent2/environments/: adversarial_pursuit_v4.py  battle_v4.py  battlefield_v5.py  combined_arms_v6.py  gather_v5.py  magent_env.py  tiger_deer_v4.py
magent2/environments/adversarial_pursuit/: adversarial_pursuit.py
magent2/environments/battle/: battle.py
magent2/environments/battlefield/: battlefield.py
magent2/environments/combined_arms/: combined_arms.py
magent2/environments/gather/: gather.py
magent2/environments/tiger_deer/: tiger_deer.py
main/: .buildinfo  404.html  index.html  searchindex.js
main/API/config/: index.html
main/API/gridworld/: index.html
main/environments/: index.html
main/environments/adversarial_pursuit/: index.html
main/environments/battle/: index.html
main/environments/battlefield/: index.html
main/environments/combined_arms/: index.html
main/environments/gather/: index.html
main/environments/tiger_deer/: index.html
main/genindex/: index.html
main/introduction/basic_usage/: index.html
main/introduction/key_concepts/: index.html
main/legacy/Tutorial for Many Kinds of Agents/: index.html
main/legacy/get_started/: index.html
main/search/: index.html
search/: index.html
src/: runtime_api.cc  runtime_api.h  temp_c_booster.cc
src/gridworld/: GridWorld.cc  GridWorld.h  Map.cc  Map.h  Range.h  RewardEngine.cc
tests/: test_magent2.py  test_render.py
travis/: build-wheels.sh
