# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "magent2"
description = "Multi-Agent Reinforcement Learning environments with very large numbers of agents."
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Farama Foundation", email = "contact@farama.org" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "game", "RL", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "numpy >=1.21.0",
    "pygame==2.1.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://farama.org"
Repository = "https://github.com/Farama-Foundation/MAgent2"
Documentation = "https://magent2.farama.org"
"Bug Report" = "https://github.com/Farama-Foundation/MAgent2/issues"

[tool.setuptools]
include-package-data = true

# Linters and Test tools #######################################################

[tool.black]
safe = true

[tool.isort]
atomic = true
profile = "black"
